@@ -409,7 +409,7 @@ h03 = uicontrol(...
   'FontSize',FS,...
   'FontName',get(0,'defaultuicontrolFontName'));
 
-    if expert
+    if expert & 0
       set(h03,...  
       'Style','popupmenu',...
       'Callback','spm(''PopUpCB'',gcbo)',...
@@ -448,7 +448,7 @@ h04 = uicontrol(...
   'FontSize',FS,...
   'FontName',get(0,'defaultuicontrolFontName'));
 
-  if expert
+  if expert & 0
     set(h04,...  
       'Style','popupmenu',...
       'Callback','spm(''PopUpCB'',gcbo)',...
